Local Storage issue
Cancel button clears - good
Timezone selection - good
Issue: When a selection is made, both toggle buttons are switching to ON.

--- a/webApp/css/styles.css
+++ b/webApp/css/styles.css
@@ -362,6 +362,7 @@ form {
 }
 
 .form-field {
+  width: 100%;
   height: 45px;
   padding: 10px; 
   border: 1px solid rgba(61, 53, 53, 0.2);
@@ -386,6 +387,43 @@ textarea {
 ::placeholder {
   color: #bcbcbc;
 }
+
+/* Inserted code from: https://www.w3schools.com/howto/howto_js_autocomplete.asp */
+.autocomplete {
+  position: relative;
+  display: inline-block;
+}
+
+.autocomplete-items {
+  position: absolute;
+  border: 1px solid #d4d4d4;
+  border-bottom: none;
+  border-top: none;
+  z-index: 99;
+  /*position the autocomplete items to be the same width as the container:*/
+  top: 100%;
+  left: 0;
+  right: 0;
+}
+
+.autocomplete-items div {
+  padding: 10px;
+  cursor: pointer;
+  background-color: #fff;
+  border-bottom: 1px solid #d4d4d4;
+}
+
+.autocomplete-items div:hover {
+  /*when hovering an item:*/
+  background-color: #7477bf;
+}
+
+.autocomplete-active {
+  /*when navigating through the items using the arrow keys:*/
+  background-color: #7477bf !important;
+  color: #ffffff;
+}
+/* end inserted code */
 /* #endregion */
 
 /* #region TOGGLE SWITCHES */
