--- a/webApp/css/styles.css
+++ b/webApp/css/styles.css
@@ -548,8 +548,7 @@ textarea {
 }
 
 button:active {
-  transform: scale(0.98);
-  box-shadow: 3px 2px 22px 1px rgba(77, 72, 72, 0.633);
+  box-shadow: inset 0 0 10px white;
 }
 /* #endregion */
 /* #endregion */
