--- a/webApp/css/styles.css
+++ b/webApp/css/styles.css
@@ -333,7 +333,7 @@ canvas {
 
 .social-stats {
   margin: 0;
-  font-size: 3.5em;
+  font-size: 2.5em;
   font-weight: 300;
 }
 /* #endregion */
@@ -617,11 +617,12 @@ button:active {
   .traffic-container {
     display: inline-flex;
     justify-content: space-between;
+    width: 100%;
   }
 
-  .non-mobile {
+  /* .non-mobile {
     margin-right: 145%;
-  }
+  } */
 
   .traffic-nav li {
     font-size: 1.1em;
